--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                         </div>
                     </div>
                 </div>
+                <h3 id="message"></h3>
             </div>
         </div>
     </div>
