Single and Multi-player feature added need to link with UI

--- a/index.html
+++ b/index.html
@@ -14,45 +14,45 @@
                 <div class="game-grid">
                     <div class="row row-1">
                         <div class="blocks">
-                            <div class="block" id="block1">
+                            <div class="block notClicked" id="block1">
                                 <p class="val"></p>
                             </div><!-- 
                                 Block 2
-                            --><div class="block" id="block2">
+                            --><div class="block notClicked" id="block2">
                                     <p class="val"></p>
                                 </div><!-- 
                                 Block 3
-                            --><div class="block" id="block3">
+                            --><div class="block notClicked" id="block3">
                                 <p class="val"></p>
                             </div>
                         </div>
                     </div>
                     <div class="row row-2">
                         <div class="blocks">
-                            <div class="block" id="block4">
+                            <div class="block notClicked" id="block4">
                                 <p class="val"></p>
                             </div><!-- 
                                 Block 2
-                            --><div class="block" id="block5">
+                            --><div class="block notClicked" id="block5">
                                     <p class="val"></p>
                                 </div><!-- 
                                 Block 3
-                            --><div class="block" id="block6">
+                            --><div class="block notClicked" id="block6">
                                     <p class="val"></p>
                                 </div>
                         </div>
                     </div>
                     <div class="row row-3">
                         <div class="blocks">
-                            <div class="block" id="block7">
+                            <div class="block notClicked" id="block7">
                                 <p class="val"></p>
                             </div><!-- 
                                 Block 2
-                            --><div class="block" id="block8">
+                            --><div class="block notClicked" id="block8">
                                     <p class="val"></p>
                                 </div><!-- 
                                 Block 3
-                            --><div class="block" id="block9">
+                            --><div class="block notClicked" id="block9">
                                     <p class="val"></p>
                                 </div>
                         </div>
