--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
                 </div>
                 <h3 id="message"></h3>
             </div>
+            <div class="playerSelection">
+                <select id="player" onchange="setGameMode(this)">
+                    <option value="onePlayer" >One Player</option>
+                    <option value="twoPlayer">Two Player</option>
+                </select>
+            </div>
+            <button id="reset">Reset Game!</button>
         </div>
     </div>
     <script src="assets/js/tic-tac.js"></script>
