--- a/index.html
+++ b/index.html
@@ -58,15 +58,19 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="gameControls">
+                <div class="playerSelection">
+                    <select id="player" onchange="setGameMode(this)">
+                        <option value="default" selected="selected">Select Mode</option>
+                        <option value="onePlayer" >One Player</option>
+                        <option value="twoPlayer" >Two Player</option>
+                    </select>
+                </div>
+                <button id="reset">Reset Game!</button>
+                </div>
                 <h3 id="message"></h3>
-            </div>
-            <div class="playerSelection">
-                <select id="player" onchange="setGameMode(this)">
-                    <option value="onePlayer" >One Player</option>
-                    <option value="twoPlayer">Two Player</option>
-                </select>
-            </div>
-            <button id="reset">Reset Game!</button>
+                <h3 id="console-message"></h3>
         </div>
     </div>
     <script src="assets/js/tic-tac.js"></script>
